fix(web): ignore browser.js during build

--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dolu Tool NUI</title>
-    <script type="text/javascript" src="nui://dolu_tool/web/browser.js" async></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/browser.js"></script>
   </body>
 </html>
